--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,14 @@
   <h1>Hokkaidolove</h1>
   <div class="header-list">
   <ul>
+  <% if user_signed_in? %>
   <%= link_to "新規投稿", new_ski_path %>
-  <%= link_to "ログイン", skis_path %>
+  <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+  <% else %>
+  <%= link_to "ログイン", new_user_session_path %>
   <%= link_to "新規登録", new_user_registration_path %>
+  <%= link_to "新規投稿", new_ski_path %>
+  <% end %>
   </ul>
   </div>
 </header>
