--- a/app/views/skis/top.html.erb
+++ b/app/views/skis/top.html.erb
@@ -1,3 +1,4 @@
+
 <div class="first-container">
 </div>
 <br>
@@ -5,12 +6,88 @@
 <br>
 <br>
 <br>
-<div class="about">
-    <div class="second-container">
+
+<div class="about"> 
+   <div class="second-container">
     <%= image_tag 'ski_3.jpg', class:"pic" %>
-    </div>
+   </div>
+
+
+
     <div class="explain">
-    <h1>about</h1>
-    <h3>文字</h3>
+     <h1>about</h1>
+        <div class="box">
+        </div>
+     
+     <h3>冬の訪れとともに、雪山の魅力が目覚める季節がやってきました。
+     <br>
+     新たなスキーシーズンをお楽しみいただくために、ここでは厳選された日本のスキー場を紹介します。
+     <br>
+     雄大な自然、最高品質の雪、そして充実した施設が、スキーやスノーボードをより楽しいものに変えることでしょう。
+     <br>
+     雪山での最高のウィンターアドベンチャーが始まります。
+     <br>
+     </h3>
     </div>
- </div>
+
+</div>
+
+
+<div class="ebi">
+<br>
+<h2>札幌市内おすすめスキー場BEST3</h2>
+<hr color="black">
+</hr>
+
+  <ul>
+   <div class="aaaaaa">
+    <li>
+      <dl>
+        <db>No1</db>
+        <dt><%= image_tag 'kokusai.jpg',class:"ski4" %></db>
+        <br>
+        <db>札幌国際スキー場</db>
+       </dl>
+    </li>
+    </div>
+    <div class="aaaaaa">
+    <li>
+    
+    <dl>
+      <db>No2</db>
+      <dt><%= image_tag 'teine.jpg',class:"ski4" %></db>
+      <br>
+      <db>サッポロテイネスキー場</db>
+    </dl>
+  </li>
+  </div>
+  <div class="aaaaaa">
+  <li>
+  <dl>
+    <db>No3</db>
+    <dt><%= image_tag 'bankei.jpg',class:"ski4" %></db>
+    <br>
+    <db>さっぽろばんけいスキー場</db>
+  </dl>
+  </li>
+  </div>
+  </ul>
+  
+  
+
+</div>
+<div class="bbb">
+<ul3>
+<div class="hokkaidomap">
+   <li> <%= image_tag 'hokkaidomap',size:'300x300', class:'ski7' %></li>
+</div>
+<div class="ccc">
+<li>四季折々の美しい風景と楽しいアクティビティが広がるスキー天国</li>
+<br>
+<li>あなたを迎える北海道は4つのエリアから構成されています。</li>
+<br>
+<li>積もる雪と共に織りなされる大自然の美しさを紹介します。</li>
+<br>
+<li>四季折々の表情を見せる各エリアであなたのスキーシーズンがより一層豊かで思い出深いものになるでしょう。</li>
+</div>
+</div>
