--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,4 +1,15 @@
-<h2>Forgot your password?</h2>
+<body class='forgot'>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+<h3>Forgot your password?</h3>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "users/shared/error_messages", resource: resource %>
@@ -14,3 +25,4 @@
 <% end %>
 
 <%= render "users/shared/links" %>
+</body>
