--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,16 @@
-<h2>Sign up</h2>
+<body class='signup'>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   
+
+ <div class='signhako'>   
+  <h3>Sign up</h3>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "users/shared/error_messages", resource: resource %>
@@ -26,4 +38,6 @@
   </div>
 <% end %>
 
-<%= render "users/shared/links" %>
+  <%= render "users/shared/links" %>
+ </div>
+ </body>
