自由にわかりやすいメッセージ

--- a/app/views/skis/top.html.erb
+++ b/app/views/skis/top.html.erb
@@ -79,7 +79,7 @@
 <div class="bbb">
 <ul3>
 <div class="hokkaidomap">
-   <li> <%= image_tag 'hokkaidomap',size:'300x300', class:'ski7' %></li>
+   <li> <%= image_tag 'hokkaidomap.jpg',size:'300x300', class:'ski7' %></li>
 </div>
 <div class="ccc">
 <li>四季折々の美しい風景と楽しいアクティビティが広がるスキー天国</li>
